# paulias

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  paulias.md  pyproject.toml
.github/workflows/: test.yml
docs/: 404.html  CNAME  index.html  style.css
docs/bsky/: index.html
docs/gh/: index.html
docs/hyps/: index.html
docs/me/: index.html
docs/pauldot/: index.html
docs/test/: index.html
paulias/: __main__.py  build.py  cli.py  config.py  deploy.py  render.py  validate.py
paulias/templates/: 404.html.j2  base.html.j2  index.html.j2  redirect.html.j2
tests/: test_build.py  test_cli.py  test_config.py  test_deploy.py  test_validate.py
tests/fixtures/: duplicate_paths.md  invalid_yaml.md  no_frontmatter.md  no_links.md  paulblish_style.css  valid.md
