[project]
name = "paulias"
version = "0.1.0"
description = "A statically hosted URL shortener for GitHub Pages."
authors = [{ name = "Paul Hallett" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "rich>=13.9",
]

[project.scripts]
paulias = "paulias.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paulias"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
